--- a/Isimemen/index.html
+++ b/Isimemen/index.html
@@ -163,16 +163,14 @@
         </div>
     </section>
 
-    <!-- Marquee
-     !animationdan sora yenilik bu section-a-->
+     <!-- Marquee-->
     <section class="marque-container">
         <div class="marque">
-            <h2>Your purpose is calling. </h2>
-            <em>It’s time to make a move</em>
-            <h2>Your purpose is calling. </h2>
-            <em>It’s time to make a move</em>
-        </div>
-       
+            <div class="righttoleft">
+                <p>Your purpose is calling.<em>It’s time to make a move.</em></p>
+                <p>Your purpose is calling.<em>It’s time to make a move.</em></p>           
+            </div>       
+        </div> 
     </section>
     <!--
     *Resources    
